# migrate-repo-test

./: .env.template  .gitignore  README.md  api.py  clean_install.sh  comparison.ipynb  comparison.py  create-gcui-react-app.ps1  fls_test.ipynb  logging.cfg.template  mb_test.ipynb  package-lock.json  package.json  package.json.original  pat_dev.ipynb  pat_dev_sql.ipynb  pat_svc_dev.ipynb  psold_test.ipynb  pyproject.toml  requirements.txt  test_jobrun.ipynb  xaa
data/: PSOLD_RG_Mapping.csv  dt.csv  pat_job_test.json  pat_mng.sql  psold_aoi.csv  test_api.json  test_batch_3.csv  test_job.json  test_jobrun.csv  test_jobrun.json  test_pseudopolicy_2.csv  tmpHPR.csv  tmpWeights.csv  udf_policy_loc.xlsx
frontend/: .gitignore  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/app/: theme.js  (+1 more)
pat/: __init__.py  pat_analysis.py  pat_job.py
pat_back/: __init__.py  create_app.py  fls_rating.py  mb_rating.py  pat.sql  pat_flag.py  pat_helper.py  pat_job.py  pat_worker.py  psold.py  psold_rating.py  settings.py  sql_helper.py
pat_common/: __init__.py  pat_flag.py  settings.py  sql_helper.py
pat_flask/: create_app.py  pat_job_mng.py  settings.py
pat_front/: package.json
pat_front/package/: LICENSE  README.md  package.json
pat_front/public/: manifest.json
pat_front/src/: App.js  App.test.js
pat_sql/: __init__.py  pat.sql  pat_job.py
public/: index.html  manifest.json
src/: App.js  App_original.js  index.js
src/app/: WbAppBar.js  WbDrawer2.js  theme.js
src/features/: NavItem.js
static/: index.html
(+54 files in other folders)
