[tool.poetry]
name = "premium-allocation-tool"
version = "0.1.0"
description = "Premium allocation tool adapted from the previous Excel/R tool"
authors = ["Chengyou Xiao"]
license = "Guy Carpenter"
packages = [
    {include = "pat_back"},
]
include = ["pat_back/react_build/**/*"]

[tool.poetry.dependencies]
python = ">=3.8.8,<4.0"
pandas = "^1.3.2"
python-dotenv = "^0.19.0"
pyodbc = "^4.0.32"
bcpandas = "^1.4.0"
fastapi = "^0.70.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.8"
autopep8 = "^1.5.7"
ipykernel = "^6.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
